--- a/spec/fixtures/vcr_cassettes/created_team_user_group.yml
+++ b/spec/fixtures/vcr_cassettes/created_team_user_group.yml
@@ -1,11 +1,11 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: https://api.lokalise.com/api2/teams/176692/groups
+    method: get
+    uri: https://api.lokalise.com/api2/teams/176692/groups/2500
     body:
-      encoding: UTF-8
-      string: '{"name":"RSpec group","is_reviewer":false,"is_admin":false,"languages":{"reference":[],"contributable":[640]}}'
+      encoding: US-ASCII
+      string: ''
     headers:
       Accept:
       - application/json
@@ -34,8 +34,6 @@ http_interactions:
       - Fri, 26 Jun 2020 13:08:21 GMT
       pragma:
       - no-cache
-      allow:
-      - GET
       x-content-type-options:
       - nosniff
       x-frame-options:
@@ -52,7 +50,7 @@ http_interactions:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"team_id":176692,"group":{"group_id":2500,"name":"RSpec group","permissions":{"is_admin":false,"is_reviewer":false,"admin_rights":[],"languages":[{"lang_id":640,"lang_iso":"en","lang_name":"English","is_writable":true}]},"created_at":"2020-06-26
-        13:08:21 (Etc\/UTC)","created_at_timestamp":1593176901,"team_id":176692,"projects":[],"members":[]}}'
-  recorded_at: Fri, 26 Jun 2020 13:08:11 GMT
+      string: '{"group_id":2500,"name":"RSpec group","permissions":{"is_admin":false,"is_reviewer":false,"admin_rights":[],"languages":[{"lang_id":640,"lang_iso":"en","lang_name":"English","is_writable":true}]},"created_at":"2020-06-26
+        13:08:21 (Etc\/UTC)","created_at_timestamp":1593176901,"team_id":176692,"projects":[],"members":[]}'
+  recorded_at: Fri, 26 Jun 2020 13:08:12 GMT
 recorded_with: VCR 6.0.0
