--- a/spec/fixtures/vcr_cassettes/upload_file.yml
+++ b/spec/fixtures/vcr_cassettes/upload_file.yml
@@ -5,12 +5,12 @@ http_interactions:
     uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/files/upload
     body:
       encoding: UTF-8
-      string: '{"data":"ZnI6DQogIHRlc3Q6IHRyYW5zbGF0aW9u","filename":"rspec_async.yml","lang_iso":"ru","queue":true}'
+      string: '{"data":"ZnI6DQogIHRlc3Q6IHRyYW5zbGF0aW9u","filename":"rspec_async.yml","lang_iso":"ru"}'
     headers:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/3.0.0
+      - ruby-lokalise-api gem/3.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -29,9 +29,9 @@ http_interactions:
       cache-control:
       - max-age=0, must-revalidate, no-cache, no-store, private
       date:
-      - Fri, 15 May 2020 10:38:35 GMT
+      - Thu, 02 Jul 2020 15:17:18 GMT
       location:
-      - "/api2/projects/803826145ba90b42d5d860.46800099/processes/ff1876382b7ba81f2bb465da8f030196ec401fa6"
+      - "/api2/projects/803826145ba90b42d5d860.46800099/processes/85c42bf5eff44648ca2f01f9db67b7d306a2f282"
       pragma:
       - no-cache
       x-content-type-options:
@@ -43,11 +43,10 @@ http_interactions:
       strict-transport-security:
       - max-age=31536000
       expires:
-      - Fri, 15 May 2020 10:38:35 GMT
+      - Thu, 02 Jul 2020 15:17:19 GMT
     body:
       encoding: UTF-8
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"ff1876382b7ba81f2bb465da8f030196ec401fa6","type":"file-import","status":"queued","message":"","created_by":20181,"created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-15
-        10:38:35 (Etc\/UTC)","created_at_timestamp":1589539115}}'
-    http_version: null
-  recorded_at: Fri, 15 May 2020 10:38:28 GMT
-recorded_with: VCR 5.1.0
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"85c42bf5eff44648ca2f01f9db67b7d306a2f282","type":"file-import","status":"queued","message":"","created_by":20181,"created_by_email":"bodrovis@protonmail.com","created_at":"2020-07-02
+        15:17:19 (Etc\/UTC)","created_at_timestamp":1593703039}}'
+  recorded_at: Thu, 02 Jul 2020 15:17:18 GMT
+recorded_with: VCR 6.0.0
