--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@ email: bodrovis@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ruby interface for the Lokalise APIv2 that
   represents returned data as Ruby objects.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/ruby-lokalise-api" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lokalise
 github_username:  lokalise
