SRUBY-3 highlight the current page

--- a/docs/_data/additional_items.yml
+++ b/docs/_data/additional_items.yml
@@ -19,6 +19,8 @@
   sub_paths:
     - title: Running tests
       path: running-tests
+    - title: Previewing the docs locally
+      path: previewing-the-docs-locally
 - title: Changelog
   path: changelog
 - title: License
