--- a/spec/fixtures/vcr_cassettes/order.yml
+++ b/spec/fixtures/vcr_cassettes/order.yml
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/2.0.1
+      - ruby-lokalise-api gem/4.0.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -20,34 +20,40 @@ http_interactions:
     headers:
       server:
       - nginx
-      date:
-      - Tue, 19 Mar 2019 18:23:14 GMT
       content-type:
       - application/json
       transfer-encoding:
       - chunked
       connection:
-      - close
+      - keep-alive
       vary:
       - Accept-Encoding
-      set-cookie:
-      - PHPSESSID=9c762294fc624ea2f41ddb3a171121ec; expires=Sat, 18-May-2019 18:23:14
-        GMT; Max-Age=5184000; path=/; secure; HttpOnly
-      expires:
-      - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
-      - no-store, no-cache, must-revalidate, no-store, no-cache
+      - max-age=0, must-revalidate, no-cache, no-store, private
+      date:
+      - Fri, 26 Feb 2021 14:43:25 GMT
       pragma:
-      - no-cache, no-cache
+      - no-cache
+      x-content-type-options:
+      - nosniff
+      x-frame-options:
+      - deny
+      x-xss-protection:
+      - 1; mode=block
+      strict-transport-security:
+      - max-age=31536000
+      referrer-policy:
+      - origin
+      expires:
+      - Fri, 26 Feb 2021 14:43:25 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"order_id":"201903198B2","project_id":"803826145ba90b42d5d860.46800099","card_id":"1774","status":"in
-        progress","created_at":"2019-03-19 18:18:21 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","source_language_iso":"en","target_language_isos":["ru"],"keys":[15519786],"source_words":{"ru":1},"provider_slug":"gengo","translation_style":"friendly","translation_tier":1,"translation_tier_name":"Professional
+      string: '{"order_id":"201903198B2","project_id":"803826145ba90b42d5d860.46800099","branch":null,"payment_method":null,"card_id":1774,"status":"completed","created_at":"2019-03-19
+        18:18:21 (Etc\/UTC)","created_at_timestamp":1553019501,"created_by":20181,"created_by_email":"bodrovis@protonmail.com","source_language_iso":"en","target_language_isos":["ru"],"keys":[15519786],"source_words":{"ru":1},"provider_slug":"gengo","translation_style":"friendly","translation_tier":1,"translation_tier_name":"Professional
         translator","briefing":"Some briefing","total":0.07}'
-    http_version: 
-  recorded_at: Tue, 19 Mar 2019 18:23:12 GMT
-recorded_with: VCR 4.0.0
+  recorded_at: Fri, 26 Feb 2021 14:43:25 GMT
+recorded_with: VCR 6.0.0
