--- a/spec/fixtures/vcr_cassettes/translation.yml
+++ b/spec/fixtures/vcr_cassettes/translation.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/translations/80015147
+    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/translations/304581218
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/2.2.0
+      - ruby-lokalise-api gem/4.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,33 +21,38 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 15 Jul 2019 16:46:00 GMT
+      - Wed, 28 Apr 2021 12:01:27 GMT
       content-type:
       - application/json
       transfer-encoding:
       - chunked
       connection:
-      - close
+      - keep-alive
       vary:
       - Accept-Encoding
-      set-cookie:
-      - PHPSESSID=0d91b73f6475a6feef64c2f4a3249d7b; expires=Fri, 13-Sep-2019 16:46:00
-        GMT; Max-Age=5184000; path=/; secure; HttpOnly
-      expires:
-      - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
-      - no-store, no-cache, must-revalidate, no-store, no-cache
+      - max-age=0, must-revalidate, no-cache, no-store, private
       pragma:
-      - no-cache, no-cache
+      - no-cache
+      x-content-type-options:
+      - nosniff
+      x-frame-options:
+      - deny
+      x-xss-protection:
+      - 1; mode=block
+      strict-transport-security:
+      - max-age=31536000
+      referrer-policy:
+      - origin
+      expires:
+      - Wed, 28 Apr 2021 12:01:27 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","translation":{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"RSpec
-        is a testing suite","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2019-03-26
-        16:41:31 (Etc\/UTC)","modified_at_timestamp":1553618491,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":5,"custom_translation_statuses":[]}}'
-    http_version: 
-  recorded_at: Mon, 15 Jul 2019 16:45:40 GMT
-recorded_with: VCR 5.0.0
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","translation":{"translation_id":304581218,"key_id":44596059,"language_iso":"ru","translation":"\u0421\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2020-05-15
+        10:44:42 (Etc\/UTC)","modified_at_timestamp":1589539482,"is_reviewed":false,"reviewed_by":0,"is_unverified":false,"is_fuzzy":false,"words":1,"custom_translation_statuses":[],"task_id":null}}'
+  recorded_at: Wed, 28 Apr 2021 12:01:27 GMT
+recorded_with: VCR 6.0.0
