fix issues with travis and certificates

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ rvm:
 install: bundle install --retry=3
 
 before_install:
+  - sudo apt-get update && sudo apt-get install apt-transport-https ca-certificates -y && sudo update-ca-certificates
   - gem update bundler
