--- a/spec/fixtures/vcr_cassettes/update_key_segment_chained.yml
+++ b/spec/fixtures/vcr_cassettes/update_key_segment_chained.yml
@@ -1,7 +1,7 @@
 ---
 http_interactions:
 - request:
-    method: post
+    method: put
     uri: https://api.lokalise.com/api2/projects/39066161618d4ecb9fdc12.00274309/keys/129358815/segments/en/4
     body:
       encoding: UTF-8
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Fri, 26 Nov 2021 14:33:49 GMT
+      - Wed, 15 Dec 2021 17:25:01 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -46,8 +46,10 @@ http_interactions:
       - max-age=31536000
       referrer-policy:
       - origin
+      x-lokalise-process-id:
+      - 2187a6ed-e23d-4044-be2c-bc530eac660f
       expires:
-      - Fri, 26 Nov 2021 14:33:49 GMT
+      - Wed, 15 Dec 2021 17:25:01 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
@@ -55,7 +57,7 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"project_id":"39066161618d4ecb9fdc12.00274309","key_id":129358815,"language_iso":"en","segment":{"segment_number":4,"language_iso":"en","value":"Chain
-        Updated","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2021-11-26
-        14:33:48 (Etc\/UTC)","modified_at_timestamp":1637937228,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":true,"words":2,"custom_translation_statuses":[]}}'
-  recorded_at: Fri, 26 Nov 2021 14:33:50 GMT
+        Updated","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2021-12-15
+        17:25:00 (Etc\/UTC)","modified_at_timestamp":1639589100,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":true,"words":2,"custom_translation_statuses":[]}}'
+  recorded_at: Wed, 15 Dec 2021 17:25:01 GMT
 recorded_with: VCR 6.0.0
