--- a/spec/fixtures/vcr_cassettes/update_key_segment.yml
+++ b/spec/fixtures/vcr_cassettes/update_key_segment.yml
@@ -1,7 +1,7 @@
 ---
 http_interactions:
 - request:
-    method: post
+    method: put
     uri: https://api.lokalise.com/api2/projects/39066161618d4ecb9fdc12.00274309/keys/129358815/segments/en/3
     body:
       encoding: UTF-8
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Fri, 26 Nov 2021 14:36:44 GMT
+      - Wed, 15 Dec 2021 17:26:01 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -46,8 +46,10 @@ http_interactions:
       - max-age=31536000
       referrer-policy:
       - origin
+      x-lokalise-process-id:
+      - 31ff159e-3879-4cfe-a47d-1d29c8d67325
       expires:
-      - Fri, 26 Nov 2021 14:36:44 GMT
+      - Wed, 15 Dec 2021 17:26:01 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
@@ -55,7 +57,7 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"project_id":"39066161618d4ecb9fdc12.00274309","key_id":129358815,"language_iso":"en","segment":{"segment_number":3,"language_iso":"en","value":"Updated
-        via API","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2021-11-26
-        14:36:44 (Etc\/UTC)","modified_at_timestamp":1637937404,"is_reviewed":true,"reviewed_by":0,"is_fuzzy":false,"words":3,"custom_translation_statuses":[]}}'
-  recorded_at: Fri, 26 Nov 2021 14:36:45 GMT
+        via API","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2021-12-15
+        17:25:59 (Etc\/UTC)","modified_at_timestamp":1639589159,"is_reviewed":true,"reviewed_by":20181,"is_fuzzy":false,"words":3,"custom_translation_statuses":[]}}'
+  recorded_at: Wed, 15 Dec 2021 17:26:01 GMT
 recorded_with: VCR 6.0.0
