--- a/spec/fixtures/vcr_cassettes/all_branches_pagination.yml
+++ b/spec/fixtures/vcr_cassettes/all_branches_pagination.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/branches?limit=1&page=1
+    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/branches?limit=2&page=2
     body:
       encoding: US-ASCII
       string: ''
@@ -10,8 +10,10 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/2.7.0
-      X-api-token:
+      - ruby-lokalise-api gem/4.5.1
+      Accept-Encoding:
+      - gzip,deflate,br
+      x-api-token:
       - "<LOKALISE_TOKEN>"
   response:
     status:
@@ -21,35 +23,47 @@ http_interactions:
       server:
       - nginx
       date:
-      - Wed, 30 Oct 2019 14:36:09 GMT
+      - Tue, 01 Feb 2022 17:30:07 GMT
       content-type:
       - application/json
-      transfer-encoding:
-      - chunked
-      connection:
-      - close
       vary:
       - Accept-Encoding
+      cache-control:
+      - max-age=0, must-revalidate, no-cache, no-store, private
       x-pagination-total-count:
-      - '1'
+      - '4'
       x-pagination-page-count:
-      - '1'
+      - '2'
       x-pagination-limit:
-      - '1'
+      - '2'
       x-pagination-page:
-      - '1'
+      - '2'
       pragma:
       - no-cache
-      cache-control:
-      - no-store, no-cache
+      x-content-type-options:
+      - nosniff
+      x-frame-options:
+      - deny
+      x-xss-protection:
+      - 1; mode=block
+      strict-transport-security:
+      - max-age=31536000
+      referrer-policy:
+      - origin
+      x-lokalise-process-id:
+      - af549ecd-456c-4fa6-8af8-470e8461980d
+      expires:
+      - Tue, 01 Feb 2022 17:30:07 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
+      content-encoding:
+      - gzip
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","branches":[{"branch_id":41302,"name":"ruby-branch","created_at":"2019-10-30
-        14:24:41 (Etc\/UTC)","created_at_timestamp":1572445481,"created_by":20181,"created_by_email":"bodrovis@protonmail.com"}]}'
-    http_version: 
-  recorded_at: Wed, 30 Oct 2019 14:36:02 GMT
-recorded_with: VCR 5.0.0
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","branches":[{"branch_id":42301,"name":"merge-me","created_at":"2019-11-13
+        12:26:20 (Etc\/UTC)","created_at_timestamp":1573647980,"created_by":20181,"created_by_email":"bodrovis@protonmail.com"},{"branch_id":42303,"name":"node-merge","created_at":"2019-11-13
+        12:53:50 (Etc\/UTC)","created_at_timestamp":1573649630,"created_by":20181,"created_by_email":"bodrovis@protonmail.com"}]}'
+  recorded_at: Tue, 01 Feb 2022 17:30:07 GMT
+recorded_with: VCR 6.0.0
