--- a/docs/_data/additional_items.yml
+++ b/docs/_data/additional_items.yml
@@ -1,3 +1,16 @@
+- title: OAuth 2
+  path: oauth2
+  sub_paths:
+    - title: Setting up the client
+      path: setting-up-the-client
+    - title: Generating auth URL
+      path: generating-auth-url
+    - title: Generating OAuth 2 token
+      path: generating-oauth-2-token
+    - title: Refreshing OAuth 2 token
+      path: refreshing-oauth-2-token
+    - title: Using OAuth 2 token
+      path: using-oauth-2-token
 - title: Customization
   path: customization
   sub_paths:
@@ -5,6 +18,8 @@
       path: setting-timeouts
     - title: Customizing JSON parser
       path: customizing-json-parser
+    - title: Choosing Network Adapter
+      path: choosing-network-adapter
 - title: Exception handling
   path: exception_handling
   sub_paths:
