--- a/spec/fixtures/vcr_cassettes/oauth2/refresh.yml
+++ b/spec/fixtures/vcr_cassettes/oauth2/refresh.yml
@@ -19,13 +19,13 @@ http_interactions:
       server:
       - nginx
       date:
-      - Tue, 01 Feb 2022 20:13:20 GMT
+      - Thu, 03 Feb 2022 17:48:33 GMT
       content-type:
       - application/json
       vary:
       - Accept-Encoding
       expires:
-      - Thu, 19 Nov 1981 08:52:00 GMT, Tue, 01 Feb 2022 20:13:20 GMT
+      - Thu, 19 Nov 1981 08:52:00 GMT, Thu, 03 Feb 2022 17:48:33 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, max-age=0, must-revalidate, private
       pragma:
@@ -41,12 +41,12 @@ http_interactions:
       referrer-policy:
       - origin
       x-lokalise-process-id:
-      - 71deb776-f0aa-4522-8587-dec8ef9a24ce
+      - fbc7b540-024d-40b8-98eb-3125f34d61a0
       content-encoding:
       - gzip
     body:
       encoding: ASCII-8BIT
-      string: '{"access_token":"123fake","expires_in":3600,"scope":"write_projects
+      string: '{"access_token":"fake","expires_in":3600,"scope":"write_projects
         write_team_groups write_tasks","token_type":"Bearer"}'
-  recorded_at: Tue, 01 Feb 2022 20:13:20 GMT
+  recorded_at: Thu, 03 Feb 2022 17:48:33 GMT
 recorded_with: VCR 6.0.0
