--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: CI
 
 on:
-  - push
-  - pull_request
+  pull_request:
+
+  push:
+    branches: [ master ]
 
 jobs:
   test:
@@ -18,6 +20,11 @@ jobs:
     env:
       LOKALISE_API_TOKEN: 123abc
       LOKALISE_PROJECT_ID: 672198945b7d72fc048021.15940510
+      OAUTH2_CLIENT_ID: fake
+      OAUTH2_CLIENT_SECRET: fake
+      OAUTH2_TOKEN: fake
+      OAUTH2_REFRESH_TOKEN: fake
+      OAUTH2_CODE: fake
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
