--- a/docs/_data/api_items.yml
+++ b/docs/_data/api_items.yml
@@ -61,6 +61,8 @@
       path: download-translation-files
     - title: Upload translation file
       path: upload-translation-file
+    - title: Delete a file
+      path: delete-a-file
 - title: Translation keys
   path: keys
   sub_paths:
