--- a/docs/_data/api_items.yml
+++ b/docs/_data/api_items.yml
@@ -63,6 +63,11 @@
       path: upload-translation-file
     - title: Delete a file
       path: delete-a-file
+- title: JWT
+  path: jwt
+  sub_paths:
+    - title: Get OTA JWT
+      path: get-ota-jwt
 - title: Translation keys
   path: keys
   sub_paths:
