--- a/lib/ruby_lokalise_api/data/resource_attributes.yml
+++ b/lib/ruby_lokalise_api/data/resource_attributes.yml
@@ -157,6 +157,9 @@ screenshot:
   - created_at
   - created_at_timestamp
 segment:
+  - project_id
+  - key_id
+  - language_iso
   - segment_number
   - language_iso
   - modified_at
