--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
           - '3.0'
           - 3.1
           - 3.2
+          - '3.3.0-preview2'
     runs-on: ${{ matrix.os }}
     env:
       LOKALISE_API_TOKEN: 123abc
