glossary terms support

--- a/lib/ruby_lokalise_api/data/resource_attributes.yml
+++ b/lib/ruby_lokalise_api/data/resource_attributes.yml
@@ -41,6 +41,18 @@ file:
   - file_id
   - filename
   - key_count
+glossary_term:
+  - id
+  - projectId
+  - term
+  - description
+  - caseSensitive
+  - translatable
+  - forbidden
+  - translations
+  - tags
+  - createdAt
+  - updatedAt
 jwt:
   - jwt
 key:
