--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           - 3.2
           - 3.3
           - 3.4
+          - '3.5.0-preview1'
     runs-on: ${{ matrix.os }}
     env:
       LOKALISE_API_TOKEN: 123abc
@@ -28,7 +29,7 @@ jobs:
       OAUTH2_CODE: fake
       OAUTH2_TOKEN_REFRESHED: fake
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
