update test matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           - 3.3
           - 3.4
           - '3.5.0-preview1'
+          - '4.0.0-preview2'
     runs-on: ${{ matrix.os }}
     env:
       LOKALISE_API_TOKEN: 123abc
