use gha for jekyll [skip ci]

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-.idea/*
+.idea/
 *.gem
-coverage/*
+coverage/
 Gemfile.lock
 *~
 .bundle
 .rvmrc
 log/*
-measurement/*
+measurement/
 pkg/*
 .DS_Store
 .env
 demo.rb
 .ruby-lsp
+docs/.jekyll-cache
