--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,40 +2,13 @@
 
 source 'https://rubygems.org'
 
-# Hello! This is where you manage which Jekyll version is used to run.
-# When you want to use a different version, change it below, save the
-# file and run `bundle install`. Run Jekyll with `bundle exec`, like so:
-#
-#     bundle exec jekyll serve
-#
-# This will help ensure the proper Jekyll version is running.
-# Happy Jekylling!
-gem 'jekyll', '~> 3.10.0'
+gem 'jekyll', '~> 4.4'
 
-# This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem 'minima', '~> 2.0'
+# gem 'jekyll-theme-minimal', '~> 0.2'
+gem 'jekyll-seo-tag', '~> 2.2'
 
-# If you want to use GitHub Pages, remove the "gem "jekyll"" above and
-# uncomment the line below. To upgrade, run `bundle update github-pages`.
-gem 'github-pages', '~> 232', group: :jekyll_plugins
+gem 'base64', '~> 0.3'
 
-# If you have any plugins, put them here!
-group :jekyll_plugins do
-  gem 'jekyll-feed', '~> 0.15'
-end
-
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-# and associated library.
-install_if -> { RUBY_PLATFORM =~ /mingw|mswin|java/ } do
-  gem 'tzinfo', '~> 2.0'
-  gem 'tzinfo-data'
-end
-
-# Performance-booster for watching directories on Windows
-gem 'wdm', '~> 0.2.0', install_if: Gem.win_platform?
-
-# kramdown v2 ships without the gfm parser by default. If you're using
-# kramdown v1, comment out this line.
 gem 'kramdown-parser-gfm'
 
 gem 'webrick', '~> 1.8'
