--- a/.github/workflows/pages-build.yml
+++ b/.github/workflows/pages-build.yml
@@ -5,6 +5,15 @@ on:
   #   branches: ["master"]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,3 +31,8 @@ jobs:
 
       - run: bundle exec jekyll build --trace
         working-directory: docs
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: _site
